fish get loaded from backend but always from first user that logs in

--- a/aquarium_idle_game/pubspec.yaml
+++ b/aquarium_idle_game/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   
 dev_dependencies:
   openapi_generator: ^4.13.1
+  openapi_generator_cli: ^4.0.0
   build_runner: ^2.3.2
 
 flutter:
